force-app/main/default/objects/redwing__Learning_Prerequisite__c/redwing__Learning_Prerequisite__c.object-meta.xml
<CustomObject>
    <label>Learning Prerequisite</label>
    <nameField>
        <displayFormat>LPN-{0}</displayFormat>
        <label>Learning Prerequisite Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Learning Prerequisites</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>