force-app/main/default/objects/redwing__Learning_Prerequisite__c/fields/redwing__Achievement__c.field-meta.xml
<CustomField>
    <fullName>redwing__Achievement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Achievement</label>
    <referenceTo>redwing__Achievement__c</referenceTo>
    <relationshipName>Prerequisite_Parent_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>