force-app/main/default/objects/redwing__Learning_Prerequisite__c/fields/redwing__Learning__c.field-meta.xml
<CustomField>
    <fullName>redwing__Learning__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Learning</label>
    <referenceTo>redwing__Learning__c</referenceTo>
    <relationshipName>Prerequisite_Parent_Objects</relationshipName>
    <type>Lookup</type>
</CustomField>