force-app/main/default/objects/redwing__Learning_Prerequisite__c/fields/redwing__Prerequisite__c.field-meta.xml
<CustomField>
    <fullName>redwing__Prerequisite__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prerequisite</label>
    <referenceTo>redwing__Prerequisite__c</referenceTo>
    <relationshipLabel>Learning Prerequisites</relationshipLabel>
    <relationshipName>Prerequisite_Parents</relationshipName>
    <type>Lookup</type>
</CustomField>